# Functional-Programming

./: README.md
1º Ano/1º Semestre/Functional Programming/Ficha3/: Ficha3.hs
1º Ano/1º Semestre/Functional Programming/Ficha4/: Ficha4.hs
1º Ano/1º Semestre/LI1 (Software Labs I) - Classes/Aula1/: Aula1.hs
1º Ano/1º Semestre/LI1 (Software Labs I) - Classes/Aula2/: Aula2.hs
1º Ano/1º Semestre/LI1 (Software Labs I) - Classes/Aula5Gloss/: Aleatorio.hs  Exemplo_5.hs  Exemplo_6.hs  Gloss_Exemplo2.hs  Gloss_Exemplo4.hs  Snake.hs
1º Ano/1º Semestre/LI1-Aulas/: README.md
1º Ano/1º Semestre/Programação-Funcional/: README.md
1º Ano/1º Semestre/Project - Crossy Road/: README.md
1º Ano/1º Semestre/Project LI1 - Crossy Road/: 2022li1g007.cabal
1º Ano/1º Semestre/Project LI1 - Crossy Road/doc/html/: Bot_2022li1g007.html  Desenha_2022li1g007.html  LI12223.html  MultiPlayerTarefa4e5_2022li1g007.html  Tarefa1_2022li1g007.html  Tarefa2_2022li1g007.html  Tarefa3_2022li1g007.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-E.html  doc-index-F.html  doc-index-I.html  doc-index-J.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-S.html  doc-index-V.html
1º Ano/1º Semestre/Project LI1 - Crossy Road/src/: Bot_2022li1g007.hs  Main.hs  MultiPlayerTarefa3_2022li1g007.hs  Tarefa4_2022li1g007.hs  Tarefa5_2022li1g007.hs
1º Ano/1º Semestre/Project LI1 - Crossy Road/tests/: Tarefa1_2022li1g007_Spec.hs  Tarefa2_2022li1g007_Spec.hs  Tarefa3_2022li1g007_Spec.hs  Tarefa5_2022li1g007_Spec.hs
Ficha5/: Ficha5.hs
Ficha6/: Ficha6.hs
Ficha8/: Ficha8.hs
LI1/Aula3/: Aula3.hs
LI1/Aula4/src/: Aula4.hs  Fact.hs
LI1/Aula5Gloss/: Gloss_Exemplo0.hs  Gloss_Exemplo3.hs  exemplo.txt
Programação-Funcional/Ficha2/: Ficha2.hs
Programação-Funcional/Ficha7/: Ficha7.hs
Programação-Funcional/Ficha8/: Ficha8.hs
(+42 files in other folders)
