cabal-version:      2.4
name:               2022li1g007
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             Mariana Rocha Cristino <a90817@alunos.uminho.pt>
                    Ana Carolina Penha Cerqueira <a104188@alunos.uminho.pt>

library
  exposed-modules:
    LI12223
    Tarefa1_2022li1g007
    Tarefa2_2022li1g007
    Tarefa3_2022li1g007
    Tarefa4_2022li1g007
    Tarefa5_2022li1g007
    MultiPlayerTarefa3_2022li1g007
    MultiPlayerTarefa4e5_2022li1g007
    AlteraJogo_2022li1g007
    Desenha_2022li1g007
    Bot_2022li1g007
  build-depends:    base ^>=4.16.3.0, random
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g007
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g007
    Tarefa2_2022li1g007
    Tarefa3_2022li1g007
    Tarefa4_2022li1g007
    Tarefa5_2022li1g007
    MultiPlayerTarefa3_2022li1g007
    MultiPlayerTarefa4e5_2022li1g007
    AlteraJogo_2022li1g007
    Desenha_2022li1g007
    Bot_2022li1g007
  build-depends:    base ^>=4.16.3.0, random
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g007-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g007
    Tarefa2_2022li1g007
    Tarefa3_2022li1g007
    Tarefa4_2022li1g007
    Tarefa5_2022li1g007
    Tarefa1_2022li1g007_Spec
    Tarefa2_2022li1g007_Spec
    Tarefa3_2022li1g007_Spec
    Tarefa4_2022li1g007_Spec
    Tarefa5_2022li1g007_Spec
  build-depends:        base ^>=4.16.3.0, HUnit, random
  hs-source-dirs:       tests src
  default-language:     Haskell2010
